# AI-tool-for-desk

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
knowledge_base/: README.md
src/: __main__.py  app.py  banner.py  chat_window.py  config_manager.py  hotkey_manager.py  knowledge_base.py  screenshot.py  screenshot_overlay.py  text_capture.py  toast.py
src/ai_providers/: adapter.py  manager.py
