[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-tool-for-desk"
version = "0.1.0"
description = "AI 桌面助手 - 截图/文字选取/AI 对话"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PySide6>=6.5.0",
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "mss>=9.0.0",
    "markdown>=3.0.0",
]

[project.scripts]
ai-desk = "src.app:main"
